CHATS_SIT/force-app/main/default/objects/CCCAP_Review__c.object
<CustomObject>
    <fields>
        <fullName>CCCAP_Review_Result__c</fullName>
        <label>CCCAP Review Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCCAP_Review_Status__c</fullName>
        <label>CCCAP Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPV_Information__c</fullName>
        <label>IPV Information</label>
        <referenceTo>IPV_Information__c</referenceTo>
        <relationshipLabel>CCCAP Review</relationshipLabel>
        <relationshipName>CCCAP_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Review_Date_and_Time__c</fullName>
        <formula>CreatedDate</formula>
        <label>Review Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Review_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <formula>CreatedBy.FirstName +&apos; &apos;+CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reviewed By</label>
        <type>Text</type>
    </fields>
    <label>CCCAP Review</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCCAP Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>